--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-     <title>Reciclados Nome</title>
+     <title>Recicle Mais</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -28,7 +28,7 @@
      <nav class="navbar navbar-expand-lg">
           <div class="container">
                <a class="navbar-brand" href="index.html">
-                    Reciclados
+                    Recicle Mais
                </a>
 
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +41,10 @@
                               <a href="#about" class="nav-link smoothScroll">Início</a>
                          </li>
                          <li class="nav-item">
-                              <a href="#project" class="nav-link smoothScroll">Texto</a>
+                              <a href="#project" class="nav-link smoothScroll">Com o que trabalhamos</a>
                          </li>
                          <li class="nav-item">
-                              <a href="#" class="nav-link">Texto</a>
+                              <a href="#onde_estamos" class="nav-link">Onde encontrar</a>
                          </li>
                          <li class="nav-item">
                               <a href="#" class="nav-link contact">Contato</a>
@@ -63,9 +63,9 @@
                     <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                          <div class="hero-text">
 
-                              <h1 class="text-white" data-aos="fade-up">TEXTO</h1>
+                              <h1 class="text-white" data-aos="fade-up">TEM FERRO VELHO AÍ?</h1>
 
-                              <a href="#" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">ZipZop</a>
+                              <a href="#" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Whatsapp</a>
 
                               <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> (xx) x xxxx-xxxx</strong>
                          </div>
@@ -117,8 +117,8 @@
                     <div class="col-lg-12 col-12">
 
                          <h2 class="mb-5 text-center" data-aos="fade-up">
-                              Algum titulo
-                              <strong>das coisas que faz</strong>
+                              Com o que
+                              <strong>trabalhamos</strong>
                          </h2>
 
                          <div class="owl-carousel owl-theme" id="project-slide">
@@ -126,7 +126,6 @@
                                    <img src="images/project/project-image01.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Lixo</small>
 
                                         <h3>
                                              <span>Latinhas</span>
@@ -138,10 +137,8 @@
                                    <img src="images/project/project-image02.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Cobre</small>
-
                                         <h3>
-                                             <span>Fio</span>
+                                             <span>Panelas</span>
                                         </h3>
                                    </div>
                               </div>
@@ -150,10 +147,8 @@
                                    <img src="images/project/project-image03.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Alumiiinio</small>
-
                                         <h3>
-                                             <span>Caco de vidro</span>
+                                             <span>Baterias</span>
                                         </h3>
                                    </div>
                               </div>
@@ -162,10 +157,8 @@
                                    <img src="images/project/project-image04.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Bituca de cigarro</small>
-
                                         <h3>
-                                             <span>Fumaça</span>
+                                             <span>Notebooks, computadores e celulares</span>
                                         </h3>
                                    </div>
                               </div>
@@ -174,13 +167,52 @@
                                    <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Garrafa pet</small>
-
                                         <h3>
-                                             <span>Sacolinha plástica</span>
+                                             <span>Fogões, geladeiras e máquinas de lavar</span>
                                         </h3>
                                    </div>
                               </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <h3>
+                                             <span>Chuveiros</span>
+                                        </h3>
+                                   </div>
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <h3>
+                                             <span>Cobre</span>
+                                        </h3>
+                                   </div>
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <h3>
+                                             <span>Bronze</span>
+                                        </h3>
+                                   </div>
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <h3>
+                                             <span>Sucatas em Geral</span>
+                                        </h3>
+                                   </div>
+                              </div>
+
                          </div>
                     </div>
 
@@ -202,22 +234,23 @@
                     </div>
 
                     <div class="col-lg-6 col-md-7 col-12">
-                         <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">E dale texto</h4>
+                         <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">Venha nos fazer uma visita!</h4>
 
                          <div class="quote" data-aos="fade-up" data-aos-delay="200"></div>
 
-                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2>
+                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Nosso local de trabalho está aberto para atende-lo de segunda a sexta das 08:00 às 16:00 e aos Sábados das 08:00 às 13:00.</h2>
+                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Venha nos visitar, seja para vender materiais ou para comprar aquela peça que está faltando.</h2>
                     </div>
 
                </div>
           </div>
      </section>
-     <h2 class="mb-5 text-center" data-aos="fade-up">
+     <h2 class="mb-5 text-center" data-aos="fade-up" id="onde_estamos">
           Onde
           <strong>estamos</strong>
      </h2>
      <div class="google-map" data-aos="zoom-in">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d651.6145061722979!2d-43.18464658330534!3d-22.500870444734613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9907fcd5e7b6b7%3A0x4f6434ba52e81fbd!2sR.%20Fagundes%20Varela%2C%20227%20-%20Duchas%2C%20Petr%C3%B3polis%20-%20RJ%2C%2025680-100!5e0!3m2!1sen!2sbr!4v1734608255157!5m2!1sen!2sbr" width="1920" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10426.469070176063!2d-43.16262709743984!3d-22.49241831381073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99a8158dc236ff%3A0xa42d8f2722cf43be!2sR.%20Dona%20Beatriz%20da%20Silva%2C%20161%20-%20Estrada%20da%20Sauda%2C%20Petr%C3%B3polis%20-%20RJ!5e0!3m2!1sen!2sbr!4v1736011068999!5m2!1sen!2sbr" width="1920" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
      </div>
 
      <footer class="site-footer">
@@ -225,7 +258,7 @@
                <div class="row">
 
                     <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
-                         <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Mais um <strong>textinho</strong> apenas.</h1>
+                         <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Aguardamos por <strong>Você</strong>!</h1>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
@@ -239,7 +272,7 @@
                          <p>
                               <a href="#">
                                    <i class="fa fa-envelope mr-2 footer-icon"></i>
-                                   e-mail@reciclado.com.br
+                                   ferrovelhopetropolis@gmail.com
                               </a>
                          </p>
                     </div>
@@ -249,7 +282,7 @@
 
                          <p class="mb-1">
                               <i class="fa fa-home mr-2 footer-icon"></i>
-                              Rua - Bairro, Estado - RJ, Brasil
+                              R. Dona Beatriz da Silva, 161 - Estrada da Sauda, Petrópolis - RJ
                          </p>
                     </div>
 
