--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                <div class="row">
 
                     <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
-                         <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Aguardamos por <strong>Você</strong>!</h1>
+                         <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">Para mais <strong>informações</strong> entre em <strong>contato</strong>!</h1>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
